# ClouDiStack

./: .env.example  .gitignore  README.md  fontes.txt  pyproject.toml  requirements.txt
src/: main.py  user_ops.py  webhook.py
src/cloudi/: a.py  cli.py  user_ops.py
src/cloudstack/: cs_client.py  session.py
src/examples/: cloudstack_user.json  create_user_CS.py  models.py
src/ks2cs/: config.py  handler.py  idempotency.py  keycloak_client.py  logging_conf.py  main.py  mapping.py  provision_actions.py  provisioner.py  state_store.py  teste.py
src/models/: cloudstack_models.py  identity.py  keycloak_models.py  models.py
src/services/: a.py  keycloak_service.py  roles.py
src/utils/: identity.py  telemetry.py
src/webhooks/: __init__.py  cli.py  client.py
