[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudi"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "cs",
  "pydantic",
  "python-dotenv"
]

[project.scripts]
cloudi = "cloudi.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
